# CubeVision

./: .gitignore  CMakeLists.txt  README.md  run-windows.cmd
cmake/: DeployRuntime.cmake
src/: CrossSolver.cpp  CrossSolver.h  CubeState.cpp  CubeState.h  CubeWidget.cpp  CubeWidget.h  MainWindow.cpp  MainWindow.h  main.cpp
tests/: CrossSolverTest.cpp  CubeStateTest.cpp
tools/: generate_charuco.cpp  generate_charuco_pdf.py
